--- a/package.json
+++ b/package.json
@@ -4,60 +4,60 @@
   "description": "this an mean stack application",
   "main": "server.js",
   "scripts": {
-   "start":"node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "agenda": "^0.6.24",
+    "angular-loading-bar": "^0.6.0",
+    "async": "^0.9.0",
     "bcryptjs": "^2.1.0",
     "body-parser": "^1.8.4",
+    "clone": "^0.2.0",
+    "compression": "^1.2.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.0.0",
     "express": "^4.9.8",
-    "async": "^0.9.0",
+    "express-session": "^1.9.1",
     "formidable": "^1.0.16",
     "fs": "^0.0.2",
     "fs-extra": "^0.14.0",
-    "compression": "^1.2.0",
-    "angular-loading-bar": "^0.6.0",
-    "express-session": "^1.9.1",
-    "gulp-angular-templatecache": "^1.5.0",
-    "gulp-concat": "^2.4.3",
     "git": "^0.1.5",
-    "agenda": "^0.6.24",
-    "clone": "^0.2.0",
     "gulp": "^3.8.10",
-    "gulp-plumber": "^0.6.6",
-    "gulp-util": "^3.0.2",
-    "jwt-simple": "^0.2.0",
-    "gulp-uglify": "^1.1.0",
+    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-concat": "^2.4.3",
     "gulp-csso": "^0.2.9",
     "gulp-ng-annotate": "^0.5.0",
-    "karma-jasmine": "^0.3.5",
+    "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.3.2",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.6",
     "jade": "^1.6.0",
-    "lodash._objecttypes": "^2.4.1",
+    "jasmine-core": "^2.1.3",
+    "jwt-simple": "^0.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5",
+    "lodash": "^2.4.1",
     "lodash._htmlescapes": "^2.4.1",
+    "lodash._objecttypes": "^2.4.1",
+    "map-stream": "^0.0.5",
+    "method-override": "^2.3.0",
     "moment": "^2.8.3",
     "mongoose": "^4.1.6",
     "morgan": "^1.3.2",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma": "^0.12.31",
-    "nodemailer": "^1.3.0",
-    "jasmine-core": "^2.1.3",
-    "map-stream": "^0.0.5",
+    "multer": "^0.1.6",
     "node-sass": "^2.0.0-beta",
-    "serve-favicon": "^2.1.6",
-    "socket.io": "^0.9.17",
-    "lodash": "^2.4.1",
-    "sugar": "^1.4.1",
+    "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
-    "method-override": "^2.3.0",
-    "util": "^0.10.3",
     "passport-local": "^1.0.0",
     "request": "^2.47.0",
-    "xml2js": "^0.4.4",
-    "multer": "^0.1.6"
+    "serve-favicon": "^2.1.6",
+    "socket.io": "^0.9.17",
+    "sugar": "^1.4.1",
+    "util": "^0.10.3",
+    "xml2js": "^0.4.4"
   },
   "devDependencies": {},
-   "author": "Mohammad",
+  "author": "Mohammad",
   "license": "MIT"
 }
