--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "productsocial20151013",
-  "version": "0.0.1",
-  "description": "this an mean stack application",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "name": "moeinsocial",
+  "version": "1.0.0",
+  "description": "social network in MEAN Stack",
+  "main": "accessDB.js",
   "dependencies": {
     "agenda": "^0.6.24",
     "angular-loading-bar": "^0.6.0",
@@ -18,30 +15,32 @@
     "debug": "^2.0.0",
     "express": "^4.9.8",
     "express-session": "^1.9.1",
-    "formidable": "^1.0.16",
     "fs": "^0.0.2",
-    "fs-extra": "^0.14.0",
+    "formidable": "^1.0.16",
     "git": "^0.1.5",
-    "gulp": "^3.8.10",
+    "fs-extra": "^0.14.0",
     "gulp-angular-templatecache": "^1.8.0",
-    "gulp-concat": "^2.4.3",
-    "gulp-csso": "^0.2.9",
-    "gulp-ng-annotate": "^0.5.0",
-    "gulp-plumber": "^0.6.6",
+    "gulp-concat": "^2.6.0",
+    "gulp-csso": "^1.0.0",
+    "gulp-header": "^1.7.1",
+    "gulp-if": "^1.2.5",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^1.3.2",
-    "gulp-uglify": "^1.1.0",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "jade": "^1.6.0",
     "jasmine-core": "^2.1.3",
     "jwt-simple": "^0.2.0",
-    "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
+    "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
+    "gulp": "^3.9.0",
     "lodash": "^2.4.1",
     "lodash._htmlescapes": "^2.4.1",
     "lodash._objecttypes": "^2.4.1",
-    "map-stream": "^0.0.5",
     "method-override": "^2.3.0",
+    "map-stream": "^0.0.5",
     "moment": "^2.8.3",
     "mongoose": "^4.1.6",
     "morgan": "^1.3.2",
@@ -50,14 +49,26 @@
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "request": "^2.47.0",
     "serve-favicon": "^2.1.6",
+    "request": "^2.47.0",
     "socket.io": "^0.9.17",
     "sugar": "^1.4.1",
     "util": "^0.10.3",
     "xml2js": "^0.4.4"
   },
   "devDependencies": {},
-  "author": "Mohammad",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [
+    "social",
+    "moein",
+    "angular",
+    "node",
+    "express",
+    "mongod"
+  ],
+  "author": "Mohammad Karimi",
   "license": "MIT"
 }
